--- a/styles/gridtimeline.css
+++ b/styles/gridtimeline.css
@@ -33,11 +33,17 @@ body {
 
 
 .timeline {
-  background-color: rgb(224, 239, 244);
+  background-color: rgb(1, 1, 1);
   display: flex;
   flex-direction: column;
   gap: 5px;
   width: 100%;
+  overflow-x: auto;
+  border-radius: 6px;
+}
+
+.timeline::-webkit-scrollbar{
+  display: none;
 }
 
 .flex-display {
@@ -47,7 +53,7 @@ body {
 
 .word-tier {
   height: 44px;
-  background-color: lightgreen;
+  background-color: rgb(163, 196, 163);
 }
 
 .grid-timeline {
@@ -59,6 +65,7 @@ body {
   width: 480px;
   display: flex;
   flex-direction: column;
+  flex-shrink: 0;
   gap: 5px;
   position: relative;
 }
