--- a/styles/gridtimeline.css
+++ b/styles/gridtimeline.css
@@ -46,6 +46,7 @@ body {
   width: 100%;
   overflow-x: auto;
   border-radius: 12px;
+  padding: 0px 10px 10px 10px;
 }
 
 .timeline::-webkit-scrollbar{
