--- a/styles/gridtimeline.css
+++ b/styles/gridtimeline.css
@@ -207,18 +207,23 @@ body {
   margin-bottom: 10px;
 }
 
+.submit-button-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 
 .submit-data {
   background-color: rgb(52, 69, 219);
   color: white;
   border: none;
-  padding: 8px 20px;
+  padding: 12px 20px;
   font-size: 16px;
   width: 150px;
   border-radius: 30px;
   cursor: pointer;
   margin-top: 20px;
-  margin-left: 200px;
 }
 
 .submit-data:hover {
@@ -230,7 +235,4 @@ body {
     display: none;
   }
 
-  .submit-data {
-    margin-left: 110px;
-  }
 }
