--- a/styles/gridtimeline.css
+++ b/styles/gridtimeline.css
@@ -235,4 +235,13 @@ body {
     display: none;
   }
 
+  .akshar-editor {
+    padding: 0px;
+  }
+  .timeline ,
+  .word-tier,
+  .adjust-akshar-timeline{
+    background-color: white;
+  }
+
 }
