--- a/styles/recorder.css
+++ b/styles/recorder.css
@@ -99,12 +99,23 @@ video {
 
 .audio-container {
   display: flex;
-  align-items: center;
-  gap: 10px;
+  flex-direction: column;
+  gap: 4px;
   background-color: #e6e5e5;
   border-radius: 4px;
-  padding: 6px;
+  padding: 6px 10px;
   margin-bottom: 5px;
+}
+
+.audio-container p {
+  font-size: 12px;
+  color: rgb(65, 64, 64);
+}
+
+.audio-preview {
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 
