updated akshar colors

--- a/styles/aksharcolors.css
+++ b/styles/aksharcolors.css
@@ -49,6 +49,7 @@
 /* Consonants - स, ह */
 .स { background-color: #90A4AE; }
 .ह { background-color: #607D8B; }
+.० {background-color: #282c2e;}
 
 /* Special characters */
 ._ { background-color: #ECEFF1; }
