--- a/styles/gridtimeline.css
+++ b/styles/gridtimeline.css
@@ -87,6 +87,7 @@ body {
 }
 
 .lock {
+  z-index: 1000;
   position: absolute;
   right: 10px;
   top : 5px;
@@ -116,6 +117,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
 }
 
 .agni-tier {
@@ -131,6 +133,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
 }
 
 .vayu-tier {
@@ -146,6 +149,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
 }
 
 
@@ -162,6 +166,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
 }
 
 .prithvi-tier {
@@ -278,4 +283,12 @@ body {
   margin-left: 10px;
   margin-top: 4px;
   margin-bottom: 6px;
+}
+
+
+.cell-label {
+  position: absolute;
+  left: 4px;
+  top: 2px;
+  color: black;
 }
