--- a/styles/navigationBar.css
+++ b/styles/navigationBar.css
@@ -33,3 +33,14 @@
   background-color: rgb(34, 34, 34);
   color: rgb(235, 235, 235);
 }
+
+
+.record-section,
+.annotate-section {
+  display: none;
+}
+
+.record-section.active,
+.annotate-section.active {
+  display: block;
+}
