--- a/styles/loginPage.css
+++ b/styles/loginPage.css
@@ -8,6 +8,7 @@
   align-items: center;
   justify-content: center;
   z-index: 9999;
+  display: none;
 }
 
 /* CARD */
@@ -104,3 +105,13 @@
 .auth-message.success {
   color: #2e7d32;
 }
+
+
+.record-section {
+  display: block;
+}
+
+.annotate-section {
+  display: none;
+}
+
