--- a/styles/loadFiles.css
+++ b/styles/loadFiles.css
@@ -53,16 +53,17 @@
   padding: 8px 16px;
   font-size: 14px;
 
-  border-radius: 6px;
+  border-radius: 14px;
   border: 1px solid #dadce0;
-  background: #f8f9fa;
+  background: #355bcb;
+  color: rgb(232, 232, 232);
 
   cursor: pointer;
   transition: background-color 0.2s, box-shadow 0.2s;
 }
 
 .load-btn:hover {
-  background-color : #f1f3f4;
+  background-color : #1b54da;
 }
 
 .generate-btn {
@@ -81,6 +82,12 @@
   .load-files-header {
     padding: 4px 4px;
     gap: 8px;
+    border-radius: 40px;
+    overflow: scroll;
+  }
+
+  .load-files-header::-webkit-scrollbar {
+    display: none;
   }
 
   .load-filters,
@@ -102,8 +109,8 @@
   .generate-btn {
     flex-shrink: 0;
     font-size: 14px;
-    padding: 8px;
-    border-radius: 5px;
+    padding: 10px 20px;
+    border-radius: 20px;
   }
 
   /* Reduce dropdown width */
