--- a/styles/loadFiles.css
+++ b/styles/loadFiles.css
@@ -174,6 +174,11 @@
   color: #1565c0;
 }
 
+.status.finished {
+  background: #c9f3d4;
+  color: #0c8e54;
+}
+
 .generate-btn {
   background: #1565c0;
   color: #f3f3f3;
