--- a/styles/loadFiles.css
+++ b/styles/loadFiles.css
@@ -1,12 +1,12 @@
 .load-files-container {
-  max-width: 1000px;
+  padding: 0px;
 }
 
 
 
 .load-files-header {
   display: flex;
-  justify-content: space-between;
+  gap: 20px;
   align-items: center;
 
   padding: 12px 16px;
@@ -139,13 +139,15 @@
 }
 
 .load-row {
+ padding: 0px 10px 20px 10px;
+ border-bottom: 1px solid #e2e2e2;
+}
+
+.file-details-container {
   display: grid;
   grid-template-columns: 280px 1fr 80px 100px 80px;
   align-items: center;
   gap: 12px;
-
-  padding: 10px 8px;
-  border-bottom: 1px solid #e2e2e2;
 }
 
 .load-row audio {
