--- a/styles/loadFiles.css
+++ b/styles/loadFiles.css
@@ -128,7 +128,7 @@
 
 .loaded-files-container {
   margin-top: -10px;
-  max-height: 400px;
+  max-height: auto;
   overflow-y: auto;
   border: 1px solid rgb(210, 210, 210);
   border-radius: 10px;
