--- a/styles/recorderPage.css
+++ b/styles/recorderPage.css
@@ -196,6 +196,7 @@
   padding: 20px;
   text-align: center;
   cursor: pointer;
+  height: 90%;
   transition: background 0.2s, border-color 0.2s;
 }
 
@@ -216,5 +217,6 @@
   border: 1px solid var(--border);
   background: white;
   cursor: pointer;
+  display: none;
 }
 
