made to append only different letters

--- a/styles/gridtimeline.css
+++ b/styles/gridtimeline.css
@@ -183,6 +183,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
 
 .adjust-akshar-timeline {
