--- a/styles/navigationBar.css
+++ b/styles/navigationBar.css
@@ -7,7 +7,8 @@
 }
 
 .record-page-button,
-.annotate-page-button {
+.annotate-page-button,
+.files-page-button{
   display: flex;
   align-items: center;
   justify-content: center;
@@ -24,7 +25,8 @@
 
 
 .record-page-button:hover ,
-.annotate-page-button:hover {
+.annotate-page-button:hover,
+.files-page-button:hover {
   box-shadow: 0px 0px 5px rgba(233, 233, 233, 0.537);
 }
 
